--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>生理狀態分析報告生成器 V42</title>
+    <title>生理狀態分析報告生成器</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
@@ -105,7 +105,7 @@
 <body>
 
 <div class="controls">
-    <h2>生理狀態分析報告生成器</h2>
+    <h2>生理狀態分析報告生成器 V42</h2>
     <div class="input-row">
         <div class="input-item"><label>1. 主電量檔案</label><input type="file" id="file1" accept=".xlsx"></div>
         <div class="input-item"><label>2. 自評檔案</label><input type="file" id="file2" accept=".xlsx"></div>
@@ -359,4 +359,5 @@
 </script>
 </body>
 </html>
+
 
