--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 <div class="analysis-img-box" id="img-container"><img id="out-img"></div>
             </div>
             <div class="footer-description">
-                <p><strong>電量指數：</strong>透過追蹤您過去7天的脈搏、深睡與自律神經等數據建立個人基準；精確算出每天的「身體電量」，讓您從昨晚的睡眠品質知道今天該衝刺還是休息。</p>
-                <p><strong>生理狀態：</strong>透過分析近7～30天的生理數據建立個人基準，利用機器學習即時偵測異常變化，並將複雜的生理資訊轉換為簡單易懂的健康燈號，幫助您快速掌握身體狀態，及早發現可能的發炎跡象並調整生活作息。</p>
+                <p><strong>電量指數：</strong>透過追蹤您不含當天、往前推算的7天睡眠期間生理數據，滾動式建立個人基準，精確計算每天的「身體電量」，讓您能從昨晚的睡眠品質知道今天該衝刺還是休息。</p>
+                <p><strong>生理狀態：</strong>透過分析近7～30天的睡眠期間生理數據建立個人基準，將複雜的生理資訊轉換為簡單易懂的健康燈號，幫助您快速掌握身體狀態，及早發現可能的發炎跡象並調整生活作息。</p>
             </div>
         </div>
         
